--- a/ex01/cv.html
+++ b/ex01/cv.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<head><title>mdereuse resume</title></head>
+	<head>
+		<title>mdereuse resume</title>
+		<style>
+			table{
+				border-collapse: collapse;
+				border:1px solid black;
+			}
+			th,td{
+				border-top:1px solid black;
+				border-left:1px solid black;
+			}
+		</style>
+	</head>
 	<body>
 		<h1>Marie Dereuse</h1>
 		<h2>Parcours</h2>
@@ -33,8 +45,39 @@
 					<td>Classe preparatoire aux etudes de dessin</td>
 					<td>Ecole Emile Cohl, Lyon</td>
 				</tr>
+				<tr>
+					<td>2019-2024</td>
+					<td>Diplome d'Expert en Architecture informatique</td>
+					<td style="border: 1px solid #424242;">Ecole 42, Paris</td>
+				</tr>
 			</tbody>
 		</table>
 		<h2>Competences</h2>
+		<ol>
+			<li>
+				Langages et frameworks
+				<ul>
+					<li>Python</li>
+					<li>C</li>
+					<li>C++</li>
+					<li>SQL</li>
+					<li>HTML, CSS</li>
+					<li>PHP Symfony</li>
+					<li>Ruby on Rails</li>
+				</ul>
+			</li>
+			<li>
+				Editeur
+				<ul>
+					<li>Vim</li>
+				</ul>
+			</li>
+			<li>
+				Outil de controle de version
+				<ul>
+					<li>Git</li>
+				</ul>
+			</li>
+		</ol>
 	</body>
 </html>
