--- a/ex01/cv.html
+++ b/ex01/cv.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<title>mdereuse resume</title>
+		<meta charset="utf-8">
 		<style>
 			table{
 				border-collapse: collapse;
