--- a/ex03/copy.html
+++ b/ex03/copy.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>my copy page</title>
-		<link rel="stylesheet" href="style.css"/>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<li>
-			<h2>Frontend</h2>
-			<p style="width: 80%;" data-value="80">HTML5</p>
-			<progress max="100" value="80" class="progress-bar html5"></progress>
-			<p style="width: 60%;" data-value="60">CSS3</p>
-			<progress max="100" value="60" class="progress-bar css3"></progress>
-			<p style="width: 50%;" data-value="50">jQuery</p>
-			<progress max="100" value="50" class="progress-bar jquery"></progress>
-		</li>
-		<li>
-			<h2>Backend</h2>
-			<p style="width: 75%;" data-value="75">Python</p>
-			<progress max="100" value="75" class="progress-bar python"></progress>
-			<p style="width: 65%;" data-value="65">PHP</p>
-			<progress max="100" value="65" class="progress-bar php"></progress>
-			<p style="width: 35%;" data-value="35">Node.js</p>
-			<progress max="100" value="35" class="progress-bar node-js"></progress>
-		</li>
+		<ul>
+			<li>
+				<h2>Frontend</h2>
+				<p style="width: 80%;" data-value="80">HTML5</p>
+				<progress class="progress-bar html5" max="100" value="80"><span></span></progress>
+				<p style="width: 60%;" data-value="60">CSS3</p>
+				<progress class="progress-bar html5" max="100" value="60"><span></span></progress>
+				<p style="width: 50%;" data-value="50">jQuery</p>
+				<progress class="progress-bar html5" max="100" value="50"><span></span></progress>
+			</li>
+			<li>
+				<h2>Backend</h2>
+				<p style="width: 75%;" data-value="75">Python</p>
+				<progress class="progress-bar html5" max="100" value="75"><span></span></progress>
+				<p style="width: 65%;" data-value="65">PHP</p>
+				<progress class="progress-bar html5" max="100" value="65"><span></span></progress>
+				<p style="width: 35%;" data-value="35">Node.js</p>
+				<progress class="progress-bar html5" max="100" value="35"><span></span></progress>
+			</li>
+		</ul>
 	</body>
 </html>
