--- a/ex04/snippets.html
+++ b/ex04/snippets.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8">
 		<title>snippets</title>
 		<script src="./file4.js"></script>
 		<script src="./file1.js"></script>
